--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,6 +112,7 @@
            parent="Widget.Material3.NavigationView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">?attr/actionBarSize</item>
         <item name="android:layout_gravity">start</item>
         <item name="headerLayout">@layout/nav_header_main</item>
     </style>
