--- a/app/src/main/res/layout/dialog_style_picker_content.xml
+++ b/app/src/main/res/layout/dialog_style_picker_content.xml
@@ -27,12 +27,20 @@
     style="@style/Dialog.Content"
     android:minHeight="@dimen/floating_dialog_recycler_view_min_height">
 
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/drag_handle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/dialog_toolbar"
         style="@style/Toolbar.Dialog.Content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/drag_handle"
         app:menu="@menu/toolbar_select_style_floating_dialog"
         app:title="@string/lbl_style"
         app:subtitle="@string/info_builtin_style_asterix"
