cleanup menu naming

--- a/app/src/main/res/layout/activity_cropimage.xml
+++ b/app/src/main/res/layout/activity_cropimage.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:menu="@menu/toolbar_cropper"
+        app:menu="@menu/image_cropper"
         app:navigationContentDescription="@android:string/cancel"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
         />
