--- a/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
+++ b/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -41,7 +41,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             style="@style/Toolbar.Dialog.Fullscreen"
-            app:menu="@menu/toolbar_action_add"
+            app:menu="@menu/edit_book_publisher_list"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/lbl_publishers"
             />
