--- a/app/src/main/res/menu/edit_book_authors_list.xml
+++ b/app/src/main/res/menu/edit_book_authors_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -20,16 +20,12 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@id/MENU_STYLE_LIST_TOGGLE"
-        android:icon="@drawable/ic_baseline_unfold_more_24"
-        android:title="@string/action_more_ellipsis"
-        app:showAsAction="always" />
-    <item
-        android:id="@id/MENU_EDIT"
-        android:icon="@drawable/ic_baseline_edit_24"
-        android:title="@string/action_edit"
-        app:showAsAction="ifRoom" />
+        android:id="@id/MENU_ACTION_CONFIRM"
+        android:title="x"
+        app:actionLayout="@layout/toolbar_menu_buttons_add2"
+        app:showAsAction="always"
+        tools:ignore="HardcodedText" />
 </menu>
