--- a/app/src/main/res/menu/edit_bookshelves.xml
+++ b/app/src/main/res/menu/edit_bookshelves.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -22,9 +22,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/MENU_UNDO"
-        android:icon="@drawable/ic_baseline_undo_24"
-        android:title="@string/action_undo"
-        android:contentDescription="@string/action_undo"
+        android:id="@id/MENU_EDIT"
+        android:icon="@drawable/ic_baseline_edit_24"
+        android:orderInCategory="@integer/MENU_ORDER_EDIT"
+        android:title="@string/action_edit_ellipsis"
         app:showAsAction="always" />
+
+    <item
+        android:id="@id/MENU_DELETE"
+        android:icon="@drawable/ic_baseline_delete_24"
+        android:orderInCategory="@integer/MENU_ORDER_DELETE"
+        android:title="@string/action_delete"
+        app:showAsAction="ifRoom" />
+
+    <group android:id="@id/MENU_GROUP_BLNS">
+        <item
+            android:id="@id/MENU_PURGE_BLNS"
+            android:icon="@drawable/ic_baseline_wash_24"
+            android:orderInCategory="@integer/MENU_ORDER_PURGE_BLNS"
+            android:title="@string/lbl_purge_blns"
+            app:showAsAction="never" />
+    </group>
 </menu>
