many more BottomSheet's

--- a/app/src/main/res/layout/dialog_book_read_progress_content.xml
+++ b/app/src/main/res/layout/dialog_book_read_progress_content.xml
@@ -26,12 +26,20 @@
     android:id="@+id/dialog_content"
     style="@style/Dialog.Content">
 
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/drag_handle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/dialog_toolbar"
         style="@style/Toolbar.Dialog.Content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/drag_handle"
         app:title="@string/lbl_track_progress_long"
         />
 
