--- a/app/src/main/res/layout/dialog_edit_book_author_content.xml
+++ b/app/src/main/res/layout/dialog_edit_book_author_content.xml
@@ -41,12 +41,20 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
+        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+            android:id="@+id/drag_handle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/dialog_toolbar"
             style="@style/Toolbar.Dialog.Content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/drag_handle"
             app:title="@string/lbl_author" />
 
         <androidx.constraintlayout.helper.widget.Flow
