--- a/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
+++ b/app/src/main/res/layout/dialog_edit_book_publisher_list.xml
@@ -25,7 +25,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:viewBindingIgnore="true"
     >
 
     <com.google.android.material.appbar.AppBarLayout
@@ -48,6 +47,42 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/dialog_edit_book_publisher_list_content" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/dialog_content"
+        style="@style/Dialog.Content">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lbl_publisher_name"
+            style="@style/TIL.AutoCompleteTextView"
+            android:layout_width="@dimen/til_fixed_width_personal_name"
+            android:hint="@string/lbl_publisher"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/publisher_name"
+                style="@style/acPersonalNameTextEntry"
+                android:imeOptions="actionDone"
+                tools:ignore="LabelFor"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/publisher_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/section_margin_top"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lbl_publisher_name"
+            tools:listitem="@layout/row_edit_publisher_list"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
