--- a/app/src/main/res/layout/dialog_edit_book_series_list.xml
+++ b/app/src/main/res/layout/dialog_edit_book_series_list.xml
@@ -25,7 +25,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:viewBindingIgnore="true"
     >
 
     <com.google.android.material.appbar.AppBarLayout
@@ -49,6 +48,58 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/dialog_edit_book_series_list_content" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/dialog_content"
+        style="@style/Dialog.Content">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lbl_series_title"
+            style="@style/TIL.AutoCompleteTextView"
+            android:hint="@string/lbl_series"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/series_title"
+                style="@style/acTitleTextEntry"
+                android:imeOptions="actionNext"
+                tools:ignore="LabelFor"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lbl_series_num"
+            style="@style/TIL.Text.SeriesNum"
+            app:endIconMode="clear_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lbl_series_title"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/series_num"
+                style="@style/TIE.SeriesNumber"
+                android:imeOptions="actionDone"
+                tools:ignore="Autofill"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/series_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/section_margin_top"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lbl_series_num"
+            tools:listitem="@layout/row_edit_series_list"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
