--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -194,6 +194,13 @@
             android:title="@string/pt_field_visibility"
             />
 
+        <Preference
+            android:fragment="com.hardbacknutter.nevertoomanybooks.settings.DialogAndMenuPreferenceFragment"
+            android:icon="@drawable/ic_baseline_tune_24"
+            android:key="psk_dialog_and_menu_popup_tuning"
+            android:title="@string/pt_dialog_and_menu_popup_tuning"
+            />
+
         <SwitchPreference
             android:defaultValue="true"
             android:icon="@drawable/ic_baseline_people_24"
