--- a/app/src/main/res/menu/bob.xml
+++ b/app/src/main/res/menu/bob.xml
@@ -36,7 +36,7 @@
     <item
         android:id="@id/MENU_FILTERS"
         android:icon="@drawable/ic_baseline_filter_list_24"
-        android:orderInCategory="@integer/MENU_ORDER_SORT"
+        android:orderInCategory="@integer/MENU_ORDER_FILTERS"
         android:title="@string/lbl_filters"
         app:showAsAction="ifRoom" />
 
