--- a/app/src/main/res/values/menus.xml
+++ b/app/src/main/res/values/menus.xml
@@ -30,19 +30,17 @@
 
     <integer name="MENU_ORDER_SEARCH">100</integer>
 
-    <integer name="MENU_ORDER_SORT">200</integer>
+    <integer name="MENU_ORDER_FILTERS">200</integer>
 
-    <integer name="MENU_ORDER_LEVEL_EXPAND_PREFERRED_LEVEL">210</integer>
-    <integer name="MENU_ORDER_LEVEL_COLLAPSE">211</integer>
-    <integer name="MENU_ORDER_LEVEL_EXPAND">212</integer>
+    <integer name="MENU_ORDER_LEVEL_EXPAND_PREFERRED_LEVEL">220</integer>
+    <integer name="MENU_ORDER_LEVEL_COLLAPSE">221</integer>
+    <integer name="MENU_ORDER_LEVEL_EXPAND">222</integer>
 
     <integer name="MENU_ORDER_SYNC_LIST_WITH_DETAILS">400</integer>
 
     <integer name="MENU_ORDER_READ">410</integer>
-    <integer name="MENU_ORDER_UNREAD">411</integer>
 
     <integer name="MENU_ORDER_COMPLETE">420</integer>
-    <integer name="MENU_ORDER_INCOMPLETE">421</integer>
 
     <integer name="MENU_ORDER_EDIT">500</integer>
     <integer name="MENU_ORDER_DUPLICATE">510</integer>
