--- a/app/src/main/res/xml/preferences_dialog_and_menu_tuning.xml
+++ b/app/src/main/res/xml/preferences_dialog_and_menu_tuning.xml
@@ -20,23 +20,26 @@
   -->
 
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Default: by screen size. -->
-    <ListPreference
-        android:defaultValue="2"
-        android:entries="@array/pe_ui_dialog_mode"
-        android:entryValues="@array/pv_ui_dialogs_mode"
-        android:icon="@drawable/ic_baseline_article_24"
-        android:key="ui.dialog.mode"
-        android:title="@string/pt_ui_dialogs_mode" />
+    <PreferenceCategory
+        android:title="@string/pc_ui">
 
-    <!-- Default: by menu and screen size. -->
-    <ListPreference
-        android:defaultValue="2"
-        android:entries="@array/pe_ui_context_menu_mode"
-        android:entryValues="@array/pv_ui_menus_context"
-        android:icon="@drawable/ic_baseline_menu_24"
-        android:key="ui.menu.context.mode"
-        android:title="@string/pc_context_menus" />
+        <!-- Default: by screen size. -->
+        <ListPreference
+            android:defaultValue="2"
+            android:entries="@array/pe_ui_dialog_mode"
+            android:entryValues="@array/pv_ui_dialogs_mode"
+            android:icon="@drawable/ic_baseline_article_24"
+            android:key="ui.dialog.mode"
+            android:title="@string/pt_ui_dialogs_mode" />
 
+        <!-- Default: by menu and screen size. -->
+        <ListPreference
+            android:defaultValue="2"
+            android:entries="@array/pe_ui_context_menu_mode"
+            android:entryValues="@array/pv_ui_menus_context"
+            android:icon="@drawable/ic_baseline_menu_24"
+            android:key="ui.menu.context.mode"
+            android:title="@string/pc_context_menus" />
+    </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
