--- a/app/src/main/res/layout/dialog_cover_browser_content.xml
+++ b/app/src/main/res/layout/dialog_cover_browser_content.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -25,13 +25,31 @@
     android:id="@+id/dialog_content"
     style="@style/Dialog.Content">
 
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/drag_handle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/dialog_toolbar"
         style="@style/Toolbar.Dialog.Content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/drag_handle"
         app:title="@string/lbl_covers_long"
+        />
+
+    <TextView
+        android:id="@+id/status_message"
+        style="@style/Text.Body"
+        android:textAppearance="?attr/textAppearanceBodySmall"
+        app:layout_constraintStart_toStartOf="@id/progress_bar"
+        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar"
+        tools:ignore="SelectableText"
+        tools:text="@string/progress_msg_searching_editions"
         />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -42,18 +60,8 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar"
+        app:layout_constraintTop_toBottomOf="@id/status_message"
         tools:visibility="visible"
-        />
-
-    <TextView
-        android:id="@+id/status_message"
-        style="@style/Text.Body"
-        android:textAppearance="?attr/textAppearanceBodySmall"
-        app:layout_constraintStart_toStartOf="@id/progress_bar"
-        app:layout_constraintTop_toBottomOf="@id/progress_bar"
-        tools:ignore="SelectableText"
-        tools:text="@string/progress_msg_searching_editions"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -65,10 +73,24 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status_message"
+        app:layout_constraintTop_toBottomOf="@id/progress_bar"
         app:spanCount="@integer/cover_browser_gallery_span_count"
         tools:itemCount="20"
         tools:listitem="@layout/row_cover_browser_gallery"
+        />
+
+    <TextView
+        android:id="@+id/lbl_preview"
+        style="@style/Text.Body"
+        android:layout_marginTop="@dimen/section_margin_top"
+        android:text="@string/info_tap_to_select"
+        android:textAppearance="?attr/textAppearanceBodySmall"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gallery"
+        tools:ignore="SelectableText"
+        tools:visibility="visible"
         />
 
     <ImageView
@@ -79,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gallery"
+        app:layout_constraintTop_toBottomOf="@id/lbl_preview"
         tools:ignore="ContentDescription"
         tools:src="@sample/covers"
         tools:visibility="visible"
