--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -110,6 +110,7 @@
         <item name="switchPreferenceStyle">@style/Widget.App.SwitchPreference</item>
         <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
 
+        <item name="recyclerViewStyle">@style/Widget.App.RecyclerView</item>
         <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
         <item name="extendedFloatingActionButtonStyle">
             @style/Widget.App.ExtendedFloatingActionButton
