--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -43,14 +43,16 @@
     </style>
 
     <!-- Top level Theme for full screen usage. -->
-    <style name="Theme.App.FullScreen" parent="Theme.App">
+    <style name="Theme.App.FullScreen"
+           parent="Theme.App">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsFloating">false</item>
     </style>
 
     <!-- Top level Theme to be used in AndroidManifest.xml-->
-    <style name="Theme.App" parent="Base.Theme.App">
+    <style name="Theme.App"
+           parent="Base.Theme.App">
         <!-- The system status bar at the very top of a screen.
              Reminder: never set this to ?attr/colorPrimary! -->
         <item name="android:statusBarColor">@color/m3blue_grey_30</item>
@@ -84,9 +86,6 @@
         <item name="colorErrorContainer">@color/m3red_90</item>
         <item name="colorOnErrorContainer">@color/m3red_10</item>
 
-        <!-- Application specific -->
-        <item name="appPreferenceAlertColor">@color/m3red_20</item>
-
         <!-- gradient used in the Navigation side bar. -->
         <item name="appNavBarColorStart">@color/m3blue_grey_50</item>
         <item name="appNavBarColorCenter">@color/m3blue_grey_70</item>
@@ -95,8 +94,56 @@
 
     <!-- *************************************************************************************** -->
 
+    <style
+        name="Theme.App.DynamicColors"
+        parent="ThemeOverlay.Material3.DynamicColors.DayNight">
+        <!-- Material3 style attributes -->
+        <item name="tabStyle">@style/Widget.App.TabLayout</item>
+        <item name="circularProgressIndicatorStyle">@style/Widget.App.CircularProgressIndicator
+        </item>
+        <item name="linearProgressIndicatorStyle">@style/Widget.App.LinearProgressIndicator</item>
+        <item name="chipGroupStyle">@style/Widget.App.ChipGroup</item>
+        <item name="snackbarTextViewStyle">@style/Widget.App.Snackbar.TextView</item>
+        <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
+        <item name="radioButtonStyle">@style/Widget.App.RadioButton</item>
+        <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
+        <item name="switchPreferenceStyle">@style/Widget.App.SwitchPreference</item>
+        <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
+
+        <item name="recyclerViewStyle">@style/Widget.App.RecyclerView</item>
+        <item name="android:fastScrollThumbDrawable">@drawable/fastscroll_thumb</item>
+        <item name="android:fastScrollTrackDrawable">@drawable/fastscroll_track</item>
+
+        <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
+        <item name="extendedFloatingActionButtonStyle">
+            @style/Widget.App.ExtendedFloatingActionButton
+        </item>
+
+
+        <!-- We MUST set these separately! Just setting the common buttonBarButtonStyle is NOT enough -->
+        <item name="buttonBarButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
+        <item name="buttonBarNegativeButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
+        <item name="buttonBarNeutralButtonStyle">@style/Widget.App.DialogButtonBarButtons.Flush
+        </item>
+
+        <!-- Material3 theme OVERLAYS! -->
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.App.MaterialAlertDialog</item>
+
+        <item name="materialCalendarTheme">@style/ThemeOverlay.App.MaterialCalendarTheme</item>
+        <item name="materialCalendarFullscreenTheme">
+            @style/ThemeOverlay.App.MaterialCalendarFullscreenTheme
+        </item>
+
+        <!-- Chip styles as attributes makes it easy to add chips from code -->
+        <item name="appChipFilterStyle">@style/Widget.Material3.Chip.Filter</item>
+        <item name="appChipInputStyle">@style/Widget.Material3.Chip.Input</item>
+    </style>
+
+
     <!-- Base theme - used by both Day and Night themes. -->
-    <style name="Base.Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.App"
+           parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Material3 style attributes -->
         <item name="tabStyle">@style/Widget.App.TabLayout</item>
         <item name="circularProgressIndicatorStyle">@style/Widget.App.CircularProgressIndicator
