fix missing windowNoTitle to the startup theme

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,6 +23,7 @@
 
     <style name="Theme.App.Startup"
            parent="Theme.Material3.DayNight.Dialog">
+        <item name="windowNoTitle">true</item>
         <item name="android:colorBackground">@color/m3grey_20</item>
     </style>
 
