--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -56,6 +56,10 @@
         <item name="colorOnError">@color/black</item>
         <item name="colorErrorContainer">@color/m3red_10</item>
         <item name="colorOnErrorContainer">@color/m3red_90</item>
+
+        <!-- Optionally enabled by a user preference setting. -->
+        <item name="dynamicColorThemeOverlay">@style/ThemeOverlay.Material3.DynamicColors.Dark
+        </item>
     </style>
 
 </resources>
